--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
-#*
 *__pycache__*
-old_tests
+*.egg-info
 .ipynb_checkpoints
-convert_to_numpy.py
-misc
+# old_tests
+# convert_to_numpy.py
+# misc
 *auto*
 *ltximg*
 *.org
